--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8">
     <title>Gráficos| google chart</title>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <!--    Achivo que contiene la hoja de estilos dentro del directorio css-->
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 </head>
 <body>
     <!--Etiqueta div que contendra el gráfico -->
-    <div id="idpastel" style="width: 900px; height: 500px;"></div>
-    <div id="idbarras" style="width: 900px; height: 500px;"></div>
-    <div id="idlinea" style="width: 900px; height: 500px;"></div>
+    <!--<div id="chart_wrap_pastel">-->
+        <!--<div id="chart_container_pastel"></div>-->
+    <!--</div>-->
 
+    <!--<div id="chart_wrap_barras">-->
+        <!--<div id="chart_container_barras"></div>-->
+    <!--</div>-->
+    <!---->
+    <!--<div id="chart_wrap_linea">-->
+        <!--<div id="chart_container_linea"></div>-->
+    <!--</div>-->
+
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1>Unilibre Google charts</h1>
+            <p>Aplicaciones de Internet</a></p>
+        </div>
+        <div class="col-md-12 col-md-offset-4">
+            <hr />
+        </div>
+
+        <div class="clearfix"></div>
+
+
+        <div class="col-md-6">
+            <div id="chart_container_pastel" class="chart"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="chart_container_barras" class="chart"></div>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div id="chart_container_linea" class="chart"></div>
+        </div>
+    </div>
 
 
     <script type="text/javascript" src="js/graficos.js"></script>
